--- a/package.json
+++ b/package.json
@@ -15,12 +15,20 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "dev": "NODE_ENV=development node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.52.0",
+    "bcrypt": "^6.0.0",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0",
     "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "@eslint/js": "^10.0.1",
+    "eslint": "^10.0.0",
+    "globals": "^17.3.0"
   }
 }
