--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0",
     "qs": "^6.15.0",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "umzug": "^3.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
     "eslint": "^10.0.0",
-    "globals": "^17.3.0"
+    "globals": "^17.3.0",
+    "sequelize-cli": "^6.6.5"
   }
 }
